layout issue solved

--- a/css/style.css
+++ b/css/style.css
@@ -384,27 +384,36 @@ footer {
 
   #products {
     padding: 0 20px;
-    margin-bottom: -70px;
   }
   .products {
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 40px;
   }
-
-  #contact {
-    width: 90vw;
-    height: 80vh;
-    padding: 0 20px;
+  /* contact */
+  .section-title {
+    margin-top: 0;
+    margin-bottom: 0;
   }
+  #contact {
+    width: 100%;
+    height: 170vh;
+  }
+
   .overly-img {
-    height: 80vh;
+    width: 100%;
+    height: 170vh;
   }
   #contact h2 {
-    margin-top: 5px;
+    font-size: 20px;
   }
   .contact {
+    padding: 0 10px;
     flex-direction: column;
   }
+  #info-title {
+    margin-top: 0;
+  }
+
   .contact-system {
     text-align: center;
     flex-direction: column;
@@ -416,7 +425,7 @@ footer {
   }
   .form-control input,
   .form-control textarea {
-    font-size: 25px;
+    font-size: 20px;
   }
   footer {
     margin-top: 10px;
@@ -473,12 +482,13 @@ footer {
   .see-more-btn {
     font-size: 25px;
   }
+  /* contact secton */
 
-  #contact {
+  /* #contact {
     width: 90vw;
     height: 100vh;
     padding: 0 20px;
-  }
+  } */
   .overly-img {
     height: 100vh;
   }
